fix(Options): icon-wrap 위치 수정

--- a/src/components/atoms/Options/index.module.scss
+++ b/src/components/atoms/Options/index.module.scss
@@ -111,6 +111,8 @@
 }
 
 .icon-wrap {
+  margin-top: 0.2em;
+
   visibility: hidden;
   &.show {
     visibility: visible;
